Automatically remove uncompilable test methods